[gd_scene load_steps=2 format=3 uid="uid://bj503cfi0m85x"]

[ext_resource type="Script" path="res://screens/add_dialogue.gd" id="1_80p5t"]

[node name="AddDialogue" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80p5t")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The name of the app. Used when specifiying a launcher for composite apps."

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Name"

[node name="Name" type="LineEdit" parent="ScrollContainer/VBoxContainer/Name"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
placeholder_text = "Name"

[node name="Description" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The description of the app."

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Description"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Description"

[node name="Description" type="TextEdit" parent="ScrollContainer/VBoxContainer/Description"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
placeholder_text = "Description"

[node name="Path" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The path to the app."

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Path"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Path"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Path"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PathInput" type="LineEdit" parent="ScrollContainer/VBoxContainer/Path/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
placeholder_text = "path/to/launchable"

[node name="PathButton" type="Button" parent="ScrollContainer/VBoxContainer/Path/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Select"

[node name="LaunchableType" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The type of the app config.

Simple: Execute the app at the given file path.

Composite: Execute the file at the given file path using another app."

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/LaunchableType"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/LaunchableType/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Type"

[node name="LaunchableType" type="OptionButton" parent="ScrollContainer/VBoxContainer/LaunchableType/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LaunchableTypeDescription" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/LaunchableType"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Specify another app to launch the file at [code]path[/code]"
fit_content = true

[node name="SublauncherContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "The app to use to launch the file at the given path."

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/SublauncherContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Launcher"

[node name="Sublauncher" type="OptionButton" parent="ScrollContainer/VBoxContainer/SublauncherContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CommandContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "A custom execute command to use. {path} is used to inject the file path.

For composite apps, {command} is used to inject the Command of the selected launcher."

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/CommandContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Command"

[node name="Command" type="LineEdit" parent="ScrollContainer/VBoxContainer/CommandContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
placeholder_text = "Command format string"

[node name="Status" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="AcceptCancel" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Accept" type="Button" parent="AcceptCancel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Accept"

[node name="Cancel" type="Button" parent="AcceptCancel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Cancel"
